--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     font-size: 16px;
     color: #2c3e50;
     background: #2c3e50;
+    padding: 15px;
 }
 
 hr {
@@ -59,9 +60,9 @@ h3 {
     font-size: 1.35rem;
 }
 
-/*.primary {*/
-/*    color: #42b983;*/
-/*}*/
+.primary {
+    color: #42b983;
+}
 
 /*.danger {*/
 /*    color: #e53935;*/
